<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sky"
    android:layoutDirection="rtl"
    android:padding="16dp"
    tools:context="com.anyvision.facekeyexample.activities.InstructionsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo_fk_2015" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/inst1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/inst_1"
            android:layout_alignParentTop="true"
            android:drawableRight="@drawable/ic_line"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/inst_2"
            android:layout_below="@+id/inst1"
            android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_line"
            android:textSize="15dp" />

        <FrameLayout
            android:id="@+id/continue_container"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/cont"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/back_container"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_bg">

            <TextView
                android:id="@+id/try_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </FrameLayout>

        <ImageView
            android:id="@+id/img_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</RelativeLayout>
