<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sky"
    android:keepScreenOn="true"
    android:layoutDirection="rtl"
    android:padding="16dp"
    tools:context="com.anyvision.facekeyexample.activities.ResultActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo_fk_2015" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <View
            android:id="@+id/horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/result_text"
            android:layout_marginTop="52dp"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/result_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_separator"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/authenticating"
                android:textColor="@color/gray"
                android:textSize="20dp" />

            <com.github.ybq.android.spinkit.SpinKitView
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:SpinKit_Color="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/survey_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/try_again_container"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/fake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/not_live"
                android:background="?attr/selectableItemBackground"
                android:text="@string/survey_text_fake" />

            <TextView
                android:id="@+id/real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/live"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackground"
                android:text="@string/survey_text_real" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/try_again_container"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_bg"
            android:visibility="gone">

            <TextView
                android:id="@+id/try_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/try_again"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>
